@@ -1,3 +1,6 @@
+Feb 26, 2017: libarchive 3.3.1 released
+    Security & Feature release
+
 Feb 19, 2017: libarchive 3.3.0 released
     Security & Feature release
 
